src/objects/inscor__Government_Award__c.object
<CustomObject>
    <description>Government Awards</description>
    <fields>
        <fullName>inscor__Award_Date__c</fullName>
        <description>Award Date</description>
        <label>Award Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__CAGE_Code__c</fullName>
        <description>CAGE Code</description>
        <label>CAGE Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company</description>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Government Awards</relationshipLabel>
        <relationshipName>Government_Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__ContractNoAndNSN__c</fullName>
        <description>ContractNoAndNSN</description>
        <externalId>true</externalId>
        <label>ContractNoAndNSN</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Contract_No__c</fullName>
        <description>Contract No</description>
        <label>Contract No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Contract_Pricing__c</fullName>
        <formula>inscor__Government_Solicitation__r.inscor__Estimated_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Pricing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Government_Solicitation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Government Solicitation</label>
        <referenceTo>inscor__Government_Solicitation__c</referenceTo>
        <relationshipLabel>Government Awards</relationshipLabel>
        <relationshipName>Government_Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Link_to_Attachments__c</fullName>
        <formula>inscor__Government_Solicitation__r.inscor__Solicitation_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Attachments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__NSN__c</fullName>
        <description>NSN</description>
        <label>NSN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Nomenclature__c</fullName>
        <label>Nomenclature</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Posted_Date__c</fullName>
        <formula>inscor__Government_Solicitation__r.inscor__Issued_On__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Posted (Date)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity__c</fullName>
        <description>Quantity</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__SOS__c</fullName>
        <description>SOS</description>
        <label>SOS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__UOM__c</fullName>
        <description>UOM</description>
        <label>UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Unit_Price__c</fullName>
        <description>Unit Price</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Vendor__c</fullName>
        <description>Vendor</description>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Government Award</label>
    <nameField>
        <displayFormat>GA-{0}</displayFormat>
        <label>Government Award Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Government Awards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>